--- a/archivos/ouput/pom.xml
+++ b/archivos/ouput/pom.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.8</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>py.edu.ucom.is2</groupId>
 	<artifactId>proyecto-camel</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>proyecto-camel</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Proyecto de practica de apache Camel en IS2-Ucom</description>
 	<properties>
 		<java.version>18</java.version>
-		<camel.version>3.17.0</camel.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -30,28 +28,8 @@
 		<dependency>
 			<groupId>org.apache.camel.springboot</groupId>
 			<artifactId>camel-spring-boot-starter</artifactId>
-			<version>${camel.version}</version>
+			<version>3.17.0</version>
 		</dependency>
-
-		<!-- agregar MQ -->
-		<dependency>
-			<groupId>org.apache.camel.springboot</groupId>
-			<artifactId>camel-activemq-starter</artifactId>
-			<version>${camel.version}</version>
-		</dependency>
-		<!-- agregar capacidad REST -->
-		<dependency>
-			<groupId>org.apache.camel.springboot</groupId>
-			<artifactId>camel-servlet-starter</artifactId>
-			<version>${camel.version}</version>
-		</dependency>
-		<!-- agregar capacidad procesamiento json -->
-		<dependency>
-			<groupId>org.apache.camel.springboot</groupId>
-			<artifactId>camel-jackson-starter</artifactId>
-			<version>${camel.version}</version>
-		</dependency>
-
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -64,7 +42,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
 
 	<build>
